app/deploy-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies-app.v1
  namespace: poc
  labels:
    app: movies-app
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: movies-app
      version: v1
  template:
    metadata:
      labels:
        app: movies-app
        version: v1
    spec:
      serviceAccountName: movies-app
      imagePullSecrets:
      - name: registry-credentials
      containers:
      - name: poc-udd
        image: k8s-previos.udd.net/nexus/repository/udd-previos-registry/poc-udd:latest
        ports:
          - containerPort: 80
