app/deploy-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies-app.v2
  namespace: poc
  labels:
    app: movies-app
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: movies-app
      version: v2
  template:
    metadata:
      labels:
        app: movies-app
        version: v2
    spec:
      serviceAccountName: movies-app
      containers:
      - name: poc-udd
        image: mergermarket/404
        ports:
          - containerPort: 80
