app/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poc-udd
  namespace: poc
  labels:
    app: movies-app
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: movies-app
      version: v1
  template:
    metadata:
      labels:
        app: movies-app
        version: v1
    spec:
      containers:
      - name: poc-udd
        image: jhidalgoc/poc-udd:latest
---
apiVersion: v1
kind: Service
metadata:
  name: poc-udd
  namespace: poc
  labels:
    app: movies-app
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 80
    name: tcp-8000
  selector:
    app: poc-udd
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: poc-ingress
  namespace: poc
spec:
  rules:
  - host: k8s-apps-previos.udd.net
    http:
      paths:
      -
        path: /mvcmovie
        pathType: Prefix
        backend:
          service:
            name: poc-udd
            port:
              number: 8000
