app/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: poc-ingress
  namespace: poc
spec:
  tls:
  - hosts:
      - k8s-apps-previos.udd.net
  rules:
  - host: k8s-apps-previos.udd.net
    http:
      paths:
      -
        path: /mvcmovie
        pathType: Prefix
        backend:
          service:
            name: movies-app
            port:
              number: 8000
